커밋 자동화 테스트